fixed height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -47,11 +47,14 @@ h1 {
   p {
     letter-spacing: -1px;
   } 
+
+  #section3 {
+    height: fit-content;
+  }
   
 }
 
 @media screen and (max-width: 800px) {
-  section {flex-flow: column wrap;}
   h1 {
     font-size: 40px;
     letter-spacing: -1.5px;
@@ -65,6 +68,14 @@ h1 {
     padding: 0;
     margin: 0;
   }
+
+  #section2 {
+    height: fit-content;
+  }
+
+  #section3 {
+    height: fit-content;
+  }
 }
 
 @media screen and (max-height: 600px) {
@@ -73,9 +84,10 @@ h1 {
       /* letter-spacing: -1.5px; */
   }
 
-  p {
-      /* letter-spacing: -1px; */
+  #section3 {
+    height: fit-content;
   }
+
 }
 
 .background {
@@ -83,8 +95,6 @@ h1 {
   margin: auto;
   background-size: cover;
 }
-
-
 
 h2 { 
   font-weight: 700;
